Initial (basic) CPU core complete
- All non prefix-cb opcodes implemented, some are just stubs for now.

- Various debugger fixes, everything in the debugger should work reliably now.

- Blarggs Cpu tests are starting to show signs of life. They don't really work yet, there are more than likely some silly bugs at this early stage.

--- a/DreamBoy.project
+++ b/DreamBoy.project
@@ -8,6 +8,8 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="src/bit.cpp"/>
+    <File Name="src/flags.cpp"/>
     <File Name="src/rom.cpp"/>
     <File Name="src/cpuOperations.cpp"/>
     <File Name="src/cpu.cpp"/>
@@ -17,6 +19,8 @@
       <File Name="src/tinyfiledialogs/tinyfiledialogs.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="includes">
+      <File Name="src/includes/bit.h"/>
+      <File Name="src/includes/flags.h"/>
       <File Name="src/includes/rom.h"/>
       <File Name="src/includes/cpuOperations.h"/>
       <File Name="src/includes/cpu.h"/>
