--- a/DreamBoy.project
+++ b/DreamBoy.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="src/log.cpp"/>
     <File Name="src/main.cpp"/>
     <File Name="src/debugger.cpp"/>
     <File Name="src/bit.cpp"/>
@@ -21,6 +22,7 @@
       <File Name="src/tinyfiledialogs/tinyfiledialogs.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="includes">
+      <File Name="src/includes/log.h"/>
       <File Name="src/includes/bit.h"/>
       <File Name="src/includes/flags.h"/>
       <File Name="src/includes/rom.h"/>
