Interrupts: Added class
- Added Interrupts class. Untested.

--- a/DreamBoy.project
+++ b/DreamBoy.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="src/interrupts.cpp"/>
     <File Name="src/cpu.cpp"/>
     <File Name="src/lcd.cpp"/>
     <File Name="src/log.cpp"/>
@@ -23,6 +24,7 @@
       <File Name="src/tinyfiledialogs/tinyfiledialogs.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="includes">
+      <File Name="src/includes/interrupts.h"/>
       <File Name="src/includes/lcd.h"/>
       <File Name="src/includes/log.h"/>
       <File Name="src/includes/bit.h"/>
