Implemented Interrupts & Timers
- Interrupts are now implemented. VBlank & Timer interrupts are requested. Not requesting Stat interrupts at the moment.

- Every one of Blarggs cpu instruction tests now pass.

- Fixed an issue in the debugger where reset wouldn't stop program execution when running to breakpoint.

--- a/DreamBoy.project
+++ b/DreamBoy.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="src/timer.cpp"/>
     <File Name="src/interrupts.cpp"/>
     <File Name="src/cpu.cpp"/>
     <File Name="src/lcd.cpp"/>
@@ -24,6 +25,7 @@
       <File Name="src/tinyfiledialogs/tinyfiledialogs.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="includes">
+      <File Name="src/includes/timer.h"/>
       <File Name="src/includes/interrupts.h"/>
       <File Name="src/includes/lcd.h"/>
       <File Name="src/includes/log.h"/>
